--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,5 @@
-<p>login works!</p>
+<label for="login">login (hugo) : </label><input [(ngModel)]="login" /><br />
+<label for="password">password (gohu) : </label
+><input [(ngModel)]="password" type="password" /><br />
+<br />
+<button (click)="connexion()">Connexion</button>
