--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
     <ul>
       <li><a routerLink="/login">Login</a></li>
       <li><a routerLink="/inscription">Inscription</a></li>
-      <li><a routerLink="/catalogue">Catalogue</a></li>
-      <li><a routerLink="/panier">Panier</a></li>
+      <li *ngIf="isUserLoggedIn"><a routerLink="/catalogue">Catalogue</a></li>
+      <li *ngIf="isUserLoggedIn"><a routerLink="/panier">Panier</a></li>
     </ul>
   </nav>
   <router-outlet></router-outlet>
