--- a/src/app/catalogue/catalogue.component.html
+++ b/src/app/catalogue/catalogue.component.html
@@ -7,5 +7,5 @@
     <h3>{{ produit.nom }}</h3>
     <p>{{ produit.description }}</p>
     <p>{{ produit.prix | currency: 'EUR':'symbol':'1.2-2' }}</p>
+    <button (click)="ajouterAuPanier(produit)">Ajouter au panier</button>
   </div>
-  
