--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,1 +1,14 @@
-<p>panier works!</p>
+<!-- panier.component.html -->
+
+<h2>Panier</h2>
+
+<div *ngFor="let produit of contenuPanier">
+  <p>
+    {{ produit.nom }} - {{ produit.quantite }} x {{ produit.prix | currency: 'EUR':'symbol':'1.2-2' }}
+    <button (click)="enleverProduit(produit)">Enlever</button>
+  </p>
+</div>
+
+<p>Total : {{ montantTotal | currency: 'EUR':'symbol':'1.2-2' }}</p>
+
+<button (click)="viderPanier()">Vider le panier</button>
