--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,35 +1,33 @@
-/* app.component.scss */
-
 div {
     text-align: center;
-  
+
     h1 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #333; /* Couleur du texte */
+        font-size: 2em;
+        margin-bottom: 20px;
+        color: #333;
+        /* Couleur du texte */
     }
-  
+
     nav {
-      ul {
-        list-style: none;
-        padding: 0;
-  
-        li {
-          display: inline-block;
-          margin-right: 20px;
-  
-          a {
-            text-decoration: none;
-            color: #555; /* Couleur du lien non visité */
-  
-            &:hover {
-              color: #000; /* Couleur du lien au survol */
+        ul {
+            list-style: none;
+            padding: 0;
+
+            li {
+                display: inline-block;
+                margin-right: 20px;
+
+                a {
+                    text-decoration: none;
+                    color: #555;
+                    /* Couleur du lien non visité */
+
+                    &:hover {
+                        color: #000;
+                        /* Couleur du lien au survol */
+                    }
+                }
             }
-          }
         }
-      }
     }
-  }
-  
-  /* Ajoutez d'autres styles selon vos préférences */
-  
+}
