--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -2,7 +2,7 @@
   <form>
 
     <label for="login">Login : </label>
-    <input [(ngModel)]="nouveauClient.login" name="login" required pattern="[a-zA-Z0-9]{1,20}" /><br />
+    <input [(ngModel)]="nouveauClient.login" name="login" required pattern="[a-zA-Z0-9\-_]{1,20}" /><br />
 
     <label for="nom">Nom : </label>
     <input [(ngModel)]="nouveauClient.nom" name="nom" required /><br />
